[gd_scene load_steps=14 format=2]

[ext_resource path="res://map/map-00.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/R_B_Back.tres" type="TileSet" id=2]
[ext_resource path="res://Tilesets/R_BasicX20.tres" type="TileSet" id=3]
[ext_resource path="res://Tilesets/R_B_Plat_X20.tres" type="TileSet" id=4]
[ext_resource path="res://Scenes/Map_Parts/MP-10-R_Mark_01.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Guns/Weap-Pick-03-Sniper.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Guns/Weap-Pick-21-Nazi-Grenade.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Guns/Weap-Pick-02-Ak-47.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Guns/Weap-Pick-10-Blaster_Pistol.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Map_Parts/MP-36-Moving_Omni_1x4.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Map_Parts/MP-02-Kill_Zone.tscn" type="PackedScene" id=11]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.1

[sub_resource type="PhysicsMaterial" id=2]
bounce = 0.25

[node name="testmap-01" type="Node2D"]
script = ExtResource( 1 )

[node name="Backround" type="TileMap" parent="."]
visible = false
z_index = -6
tile_set = ExtResource( 2 )
cell_size = Vector2( 20, 20 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131072, 49, 0, 131073, 49, 0, 131074, 49, 0, 131075, 49, 0, 131076, 49, 0, 131077, 49, 0, 131078, 49, 0, 131079, 49, 0, 131080, 49, 0, 131081, 49, 0, 131082, 49, 0, 131084, 49, 0, 131085, 49, 0, 131086, 49, 0, 131089, 49, 0, 131090, 49, 0, 131104, 49, 0, 131105, 49, 0, 131106, 49, 0, 131107, 49, 0, 131109, 49, 0, 131110, 49, 0, 196608, 49, 0, 196609, 49, 0, 196610, 49, 0, 196614, 49, 0, 196615, 49, 0, 196617, 49, 0, 196621, 49, 0, 196622, 49, 0, 196624, 49, 0, 196625, 49, 0, 196626, 49, 0, 196627, 49, 0, 196628, 49, 0, 196629, 49, 0, 196630, 49, 0, 196646, 49, 0, 2883662, 2, 0, 2883663, 2, 0, 2883664, 2, 0, 2949205, 0, 0, 3014747, 1, 0, 3014748, 1, 0, 3014749, 1, 0, 3014750, 1, 0, 3014751, 1, 0, 3080279, 1, 0, 3080280, 1, 0, 3276800, 1, 0, 3276808, 0, 0, 3276877, 1, 0, 3473457, 0, 0, 3473458, 0, 0, 3473459, 0, 0, 3473469, 0, 0, 3473470, 0, 0, 3473471, 0, 0, 3473472, 0, 0, 3473473, 0, 0, 3473474, 0, 0, 3473475, 0, 0, 3473476, 0, 0, 3473477, 0, 0, 3473478, 0, 0, 3473490, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="." groups=[
"map",
"map_part",
]]
z_index = -2
tile_set = ExtResource( 3 )
cell_size = Vector2( 20, 20 )
collision_layer = 983566
collision_mask = 983054
format = 1
tile_data = PoolIntArray( 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 262183, 0, 0, 262184, 0, 0, 262185, 0, 0, 262186, 0, 0, 262187, 0, 0, 262188, 0, 0, 262189, 0, 0, 262190, 0, 0, 262191, 0, 0, 262192, 0, 0, 262193, 0, 0, 327680, 0, 0, 327685, 0, 0, 327691, 0, 0, 327696, 0, 0, 327702, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 524375, 0, 0, 524376, 0, 0, 524377, 0, 0, 524378, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 852009, 0, 0, 852010, 0, 0, 852011, 0, 0, 852012, 0, 0, 852013, 0, 0, 852014, 0, 0, 852015, 0, 0, 852016, 0, 0, 852017, 0, 0, 852018, 0, 0, 852019, 0, 0, 852020, 0, 0, 852021, 0, 0, 852022, 0, 0, 852023, 0, 0, 852024, 0, 0, 852025, 0, 0, 852026, 0, 0, 852027, 0, 0, 852028, 0, 0, 852029, 0, 0, 852030, 0, 0, 852031, 0, 0, 852032, 0, 0, 852033, 0, 0, 852034, 0, 0, 852035, 0, 0, 852036, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1114190, 0, 0, 1114191, 0, 0, 1114192, 0, 0, 1114193, 0, 0, 1114194, 0, 0, 1114195, 0, 0, 1114196, 0, 0, 1114197, 0, 0, 1114198, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, 1376256, 0, 0, 1441792, 0, 0, 1507328, 0, 0, 1572864, 0, 0, 1638400, 0, 0, 1703936, 0, 0, 1769472, 0, 0, 1835008, 0, 0, 1900544, 0, 0, 1966080, 0, 0, 2031616, 0, 0, 2097152, 0, 0, 2162688, 0, 0, 2228224, 0, 0, 2293760, 0, 0, 2359296, 0, 0, 2424832, 0, 0, 2490368, 0, 0, 2555904, 0, 0, 2621440, 0, 0, 2686976, 0, 0, 2752512, 0, 0, 2752558, 15, 0, 2752559, 16, 0, 2752560, 16, 0, 2752561, 17, 0, 2818048, 0, 0, 2883584, 0, 0, 2949120, 0, 0, 3014656, 0, 0, 3080192, 0, 0, 3080276, 0, 0, 3080277, 0, 0, 3080278, 0, 0, 3080279, 0, 0, 3080280, 0, 0, 3080281, 0, 0, 3080282, 0, 0, 3080283, 0, 0, 3145728, 0, 0, 3145802, 0, 0, 3145803, 0, 0, 3145804, 0, 0, 3145805, 0, 0, 3211264, 0, 0, 3276800, 0, 0, 3276895, 0, 0, 3342336, 0, 0, 3342431, 0, 0, 3407872, 0, 0, 3407877, 0, 0, 3407883, 0, 0, 3407888, 0, 0, 3407894, 0, 0, 3407899, 0, 0, 3407905, 0, 0, 3407967, 0, 0, 3473408, 0, 0, 3473409, 0, 0, 3473410, 0, 0, 3473411, 0, 0, 3473412, 0, 0, 3473413, 0, 0, 3473419, 0, 0, 3473420, 0, 0, 3473421, 0, 0, 3473422, 0, 0, 3473423, 0, 0, 3473424, 1, 0, 3473430, 0, 0, 3473431, 1, 0, 3473432, 1, 0, 3473433, 1, 0, 3473434, 1, 0, 3473435, 1, 0, 3473441, 1, 0, 3473442, 1, 0, 3473443, 1, 0, 3473444, 1, 0, 3473445, 1, 0, 3473446, 1, 0, 3473447, 1, 0, 3473448, 1, 0, 3473449, 1, 0, 3473450, 1, 0, 3473451, 1, 0, 3473452, 1, 0, 3473453, 1, 0, 3473454, 1, 0, 3473455, 1, 0, 3473456, 1, 0, 3473457, 1, 0, 3473458, 1, 0, 3473459, 1, 0, 3473460, 1, 0, 3473461, 1, 0, 3473462, 1, 0, 3473463, 1, 0, 3473464, 1, 0, 3473465, 1, 0, 3473466, 1, 0, 3473467, 1, 0, 3473468, 1, 0, 3473469, 1, 0, 3473470, 1, 0, 3473471, 1, 0, 3473472, 1, 0, 3473473, 1, 0, 3473474, 1, 0, 3473475, 1, 0, 3473476, 1, 0, 3473477, 0, 0, 3473500, 0, 0, 3473501, 0, 0, 3473502, 0, 0, 3473503, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap2" type="TileMap" parent="." groups=[
"map_part",
]]
z_index = -1
tile_set = ExtResource( 4 )
cell_size = Vector2( 20, 20 )
collision_layer = 983046
collision_mask = 983558
format = 1
tile_data = PoolIntArray( 2883605, 7, 0, 2883606, 7, 0, 2883607, 7, 0, 2883608, 7, 0, 2883609, 7, 0, 2883610, 7, 0, 2883611, 7, 0, 2883612, 7, 0, 2883613, 7, 0, 2883614, 7, 0, 2883615, 7, 0, 2883616, 7, 0, 2883617, 7, 0, 2883619, 6, 0, 2883620, 6, 0, 2883621, 6, 0, 2883622, 6, 0, 2883623, 6, 0, 2883624, 6, 0, 2883625, 6, 0, 2883626, 6, 0, 2883628, 6, 0, 2883629, 6, 0, 2883630, 6, 0, 2883631, 6, 0, 2883632, 6, 0, 2883633, 6, 0, 2883634, 6, 0, 2883635, 6, 0, 2883636, 6, 0, 2883637, 6, 0, 2883639, 7, 0, 2883640, 7, 0, 2883641, 7, 0, 2883642, 7, 0, 2883643, 7, 0, 2883644, 7, 0, 2883645, 7, 0, 2883646, 7, 0, 2883647, 7, 0, 2883648, 7, 0, 2883649, 7, 0, 2883650, 7, 0, 2883651, 7, 0, 2883653, 6, 0, 2883654, 7, 0, 2883655, 7, 0, 2883656, 7, 0, 2883657, 7, 0, 2883658, 7, 0, 2883659, 7, 0, 2883660, 7, 0, 3145746, 7, 0, 3145747, 7, 0, 3145748, 7, 0, 3145749, 6, 0, 3145750, 6, 0, 3145751, 6, 0, 3145752, 6, 0, 3145753, 6, 0, 3145755, 6, 0, 3145756, 6, 0, 3145757, 6, 0, 3145758, 6, 0, 3145759, 6, 0, 3145760, 6, 0, 3145761, 6, 0, 3145762, 6, 0, 3145763, 6, 0, 3145764, 6, 0, 3145765, 6, 0, 3145767, 6, 0, 3145768, 6, 0, 3145769, 6, 0, 3145770, 6, 0, 3145771, 6, 0, 3145772, 6, 0, 3145773, 7, 0, 3145774, 7, 0, 3145776, 7, 0, 3145777, 7, 0, 3145778, 7, 0, 3145779, 7, 0, 3145780, 7, 0, 3145781, 7, 0, 3145782, 7, 0, 3145783, 7, 0, 3145784, 7, 0, 3145786, 7, 0, 3145787, 8, 0, 3342336, -1610612723, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player_spawns" type="Node2D" parent="."]
editor/display_folded = true

[node name="Position2D" type="Position2D" parent="Player_spawns"]
position = Vector2( 515, 1040 )

[node name="Position2D3" type="Position2D" parent="Player_spawns"]
position = Vector2( 480, 1040 )

[node name="Position2D6" type="Position2D" parent="Player_spawns"]
position = Vector2( 850, 1040 )

[node name="Position2D5" type="Position2D" parent="Player_spawns"]
position = Vector2( 1230, 1040 )

[node name="Position2D4" type="Position2D" parent="Player_spawns"]
position = Vector2( 980, 1040 )

[node name="Position2D8" type="Position2D" parent="Player_spawns"]
position = Vector2( 720, 1040 )

[node name="Position2D9" type="Position2D" parent="Player_spawns"]
position = Vector2( 1120, 1040 )

[node name="Power_Ups" type="Node2D" parent="."]
editor/display_folded = true

[node name="R_Mark_01" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 1550, 890 )

[node name="Weap-Pick-03-Sniper" parent="Power_Ups" instance=ExtResource( 6 )]
position = Vector2( 1290, 1030 )
physics_material_override = SubResource( 1 )

[node name="Weap-Pick-21-Nazi-Grenade" parent="Power_Ups" instance=ExtResource( 7 )]
position = Vector2( 1380, 980 )
physics_material_override = SubResource( 2 )

[node name="Weap-Pick-02-Ak-47" parent="Power_Ups" instance=ExtResource( 8 )]
position = Vector2( 1710, 890 )

[node name="Weap-Pick-10-Blaster_Pistol" parent="Power_Ups" instance=ExtResource( 9 )]
position = Vector2( 1520, 940 )

[node name="R_Mark_02" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 1370, 890 )

[node name="R_Mark_03" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 950, 970 )

[node name="R_Mark_04" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 1150, 970 )

[node name="R_Mark_05" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 1090, 890 )

[node name="R_Mark_06" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 870, 890 )

[node name="R_Mark_07" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 770, 970 )

[node name="R_Mark_08" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 530, 970 )

[node name="R_Mark_09" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 690, 890 )

[node name="R_Mark_10" parent="Power_Ups" instance=ExtResource( 5 )]
position = Vector2( 410, 890 )

[node name="Map_parts" type="Node2D" parent="." groups=[
"map_part",
]]
position = Vector2( -5, 5 )

[node name="MP-36-Moving_Solid_Left" parent="Map_parts" instance=ExtResource( 10 )]
position = Vector2( 885, 835 )
up = true
kill_left_on = true
wait = false

[node name="MP-36-Moving_Solid_Left2" parent="Map_parts" instance=ExtResource( 10 )]
position = Vector2( 60, 100 )
down = true
kill_down_on = true
how_far = 460
wait = false

[node name="MP-36-Moving_Solid_Left3" parent="Map_parts" instance=ExtResource( 10 )]
position = Vector2( 60, 1040 )
up = true
kill_up_on = true
how_far = 460
wait = false

[node name="MP-36-Moving_Solid_Left4" parent="Map_parts" instance=ExtResource( 10 )]
position = Vector2( 285, 555 )
up = true
kill_up_on = true
how_far = 460
wait = false

[node name="MP-36-Moving_Solid_Left5" parent="Map_parts" instance=ExtResource( 10 )]
position = Vector2( 285, 575 )
down = true
kill_down_on = true
how_far = 460
wait = false

[node name="Kill_Zone" parent="." instance=ExtResource( 11 )]
position = Vector2( 1016.51, 1127.47 )

[node name="Start_Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="Start_Timer" to="." method="_on_Start_Timer_timeout"]
